<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="location_enable">Please enable your Location service and make sure it should be in high accuracy.</string>
    <string name="change_network">Please make sure Location service should be in high accuracy.</string>
    <string name="app_buildversion">Version</string>
    <string name="c_tryagain"> Try again! </string>
    <string name="back">Back</string>
    <string name="nodata">No data found</string>
    <string name="check_net_connection">Check your internet connection</string>
    <string name="location_disable">Location Services Disabled</string>
    <string name="enable">Enable</string>
    <string name="cancel"> Cancel </string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="phone">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgotpswd"> Forgot Password ? </string>
    <string name="done"> DONE </string>
    <string name="signin">Sign In</string>
    <string name="enter_your_mobile_number">Please enter your mobile number</string>
    <string name="check_internet">Please Take New Ride</string>
    <string name="t_ok"> OK </string>
    <string name="enter_mobile_number">Please enter your mobile number</string>
    <string name="enter_the_password">Please enter your password</string>
    <string name="pwd_min">Password should be minimum 6 characters</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>
    <string name="confirm_complete">Are you sure you want to complete this trip?</string>
    <string name="m_me"> Profile </string>
    <string name="total">Total</string>
    <string name="excuse_me_brevity"> Excuse my brevity,Sign up with the Referral code </string>
    <string name="and_earn"> and earn </string>
    <string name="download_from">. Download the app from:</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancelled">Cancelled</string>
    <string name="m_logout">Log Out</string>
    <string name="submit"> Submit </string>
    <string name="pwd_same">Password and confirm password does not match</string>
    <string name="cancell"> Cancel </string>
    <string name="image_failed">Please select image from valid path(Gallery folder)</string>
    <string name="first"> First Name </string>
    <string name="last"> Last Name </string>
    <string name="email"> Email  </string>
    <string name="mobile"> Mobile </string>
    <string name="confimpswd"> Confirm Password </string>
    <string name="bankstmt">Bank A/C is used to pay out commission</string>
    <string name="bankcomm"><nowiki>*</nowiki></string>
    <string name="no_changes">No changes made</string>
    <string name="my_status">My Location</string>
    <string name="you_are_here">You are here!</string>
    <string name="current_location">Current Location</string>
    <string name="trip_history">Trip History</string>
    <string name="trip_details">Trip Details</string>
    <string name="past_booking">Past Bookings</string>
    <string name="name">Name</string>
    <string name="accept_time">30 SECONDS LEFT TO ACCEPT</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="minutestxt">Minute</string>
    <string name="mins">min(s)</string>
    <string name="secondstxt">Seconds</string>
    <string name="accept"> ACCEPT </string>
    <string name="decline"> Decline </string>
    <string name="Trip_Request">Trip Request</string>
    <string name="seconds_to_left">LEFT TO ACCEPT</string>
    <string name="device_not_support_map">Device does not support map version!</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="stop_waiting">Stop Waiting</string>
    <string name="start_waiting">Start Waiting</string>
    <string name="heading_ongoing">Waiting For Passenger</string>
    <string name="pass_onboard">Start Trip</string>
    <string name="ongoing_journey">Trip in Progress</string>
    <string name="waiting_time_txt">Waiting Time</string>
    <string name="arvd_destination">End Trip</string>
    <string name="ive_arrived">I\'ve Arrived</string>
    <string name="pickup_passenger">Pickup Passenger</string>
    <string name="you_are_in_trip">You\'re already in a trip!</string>
    <string name="pickuploc"> Pick up Location </string>
    <string name="currentloc"> Current Location </string>
    <string name="droploc"> Drop Location </string>
    <string name="picklocation"> Pick up Location </string>
    <string name="notes">Landmark</string>
    <string name="you">You</string>
    <string name="waiting_time">Waiting Time Cost(per min)</string>
    <string name="total_km">Total km </string>
    <string name="per">per</string>
    <string name="actual_distance">Total Distance</string>
    <string name="waiting_cost">Waiting Time Cost </string>
    <string name="Tax">Tax</string>
    <string name="tax"> Tax( </string>
    <string name="tax_percent"> %) </string>
    <string name="total_amount">Total</string>
    <string name="paymentby">Payment by</string>
    <string name="cash"> Cash </string>
    <string name="card"> Card </string>
    <string name="uncard"> New Card </string>
    <string name="fare_calculator">Fare Calculator</string>
    <string name="wallet_amount">Wallet Amount Used</string>
    <string name="pay_amount">Amount to Pay</string>
    <string name="trip_completed">Trip Completed</string>
    <string name="trip_id">Trip ID</string>
    <string name="p_congrats"> Payment Completed </string>
    <string name="p_main"> Back To Home </string>
    <string name="p_cardno">Card Number **** **** **** **** </string>
    <string name="p_expiry">Expiry MM/YY </string>
    <string name="p_cvv">CVV</string>
    <string name="invite_sms">SMS</string>
    <string name="invite_email">Email</string>
    <string name="invite_fb">Facebook</string>
    <string name="invite_whatsapp">Whats App</string>
    <string name="invite_twitter">Twitter</string>
    <string name="invite_sharevia">Share Via</string>
    <string name="invite_frdrides">When a driver rides the trip with your code</string>
    <string name="invite_youearn">You Earn</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="sendmail">Send mail</string>
    <string name="there_is_no_email_client_installed">There is no email client installed</string>
    <string name="add">Add</string>
    <string name="amount"> Amount </string>
    <string name="payment"> Payment </string>
    <string name="t_passname">Passenger Name</string>
    <string name="t_pickloc">Pick up Location</string>
    <string name="t_picktime">Pick up Time</string>
    <string name="t_droploc">Drop Location</string>
    <string name="t_droptime">Drop Time</string>
    <string name="t_distance">Distance Travelled</string>
    <string name="t_tripduration">Trip Duration</string>
    <string name="heading_payuncard">Pay with new card</string>
    <string name="ent_ccard_no">Please enter your credit card number</string>
    <string name="ent_chk_ccard">Kindly check your credit card number</string>
    <string name="ent_exp_date">Please enter expiry date</string>
    <string name="ent_exp_year_gt">Expired year should be equal and greater than current year</string>
    <string name="ent_cvv">Please enter your cvv number</string>
    <string name="ent_chk_cvv">Kindly check your cvv number</string>
    <string name="message"> Message </string>
    <string name="ok">OK</string>
    <string name="select_language">Select Language</string>
    <string name="discount">Discount</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="enter_the_first_name">Please enter your first name</string>
    <string name="enter_the_last_name">Please enter your last name</string>
    <string name="enter_the_card_number">Please enter your card number</string>
    <string name="enter_the_valid_card_number">Please enter valid card number</string>
    <string name="enter_the_expiry_date">Please enter your expiry date</string>
    <string name="enter_the_email">Please enter your Email</string>
    <string name="enter_the_valid_email">Please enter valid Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_in_going_trip">Are you sure want to cancel the trip?</string>
    <string name="please_click_back_again_exit">Please click back again to exit</string>
    <string name="upload_your_image"> Upload your File </string>
    <string name="file_upload">Upload Files?</string>
    <string name="choose">Choose File</string>
    <string name="please_choose">Please choose your file</string>
    <string name="please_choosedate">Please choose correct date</string>
    <string name="call_passeneger">Call</string>
    <string name="taxi_details">Taxi Details</string>
    <string name="taxi_model">Taxi Model</string>
    <string name="taxi_number">Taxi Number</string>
    <string name="taxi_assignfrom">Taxi from Date</string>
    <string name="taxi_assignto">Taxi to Date</string>
    <string name="help"> Help </string>
    <string name="s_signin"> Log In </string>
    <string name="s_pass_max">Password should be less than 32 characters</string>
    <string name="remarks">Remarks</string>
    <string name="r_fare"> Fare </string>
    <string name="l_fromdate"> From date </string>
    <string name="l_todate"> To date </string>
    <string name="f_timetoreach"> Time to Reach </string>
    <string name="f_forgotpwd"> Forgot Password </string>
    <string name="reg_success">Your registration has been successfully completed</string>
    <string name="reg_msg">Go to nearest service center for car inspection </string>
    <string name="reg_msg1">or visit</string>
    <string name="reg_msg2">www.seero.net</string>
    <string name="c_oldpwd"> Old Password </string>
    <string name="c_newpwd"> New Password </string>
    <string name="c_conpwd"> Confirm Password </string>
    <string name="c_chnpwd"> Change Password </string>
    <string name="m_timer">00.00.00</string>
    <string name="referral"> Referral </string>
    <string name="trip">Trip</string>
    <string name="trips1">Trips</string>
    <string name="Lasttrip">Last Trip</string>
    <string name="Last2trip">Last 2 Trips</string>
    <string name="Last3trip">Last 3 Trips</string>
    <string name="waitingpassenger">Waiting For Passenger</string>
    <string name="tripprogress">Trip in Progress</string>
    <string name="tripdetails">Trip Details</string>
    <string name="zero"> 0 </string>
    <string name="Colon"> : </string>
    <string name="seconds">00</string>
    <string name="farecal"> Fare </string>
    <string name="string_tips">Tips</string>
    <string name="round_trip"> Round Trip </string>
    <string name="f_km"> km </string>
    <string name="show">Show</string>
    <string name="onmyway">On My Way</string>
    <string name="start_time">Start Time</string>
    <string name="signup">Sign Up</string>
    <string name="terms_condition">By logging in you agree to our</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="end_time">End Time</string>
    <string name="title">Title</string>
    <string name="week_days">Week Days</string>
    <string name="enter_title"> Enter the title</string>
    <string name="enter_start_loc"> Enter the start location</string>
    <string name="enter_end_loc"> Enter the end location</string>
    <string name="enter_start_time"> Enter the start time</string>
    <string name="enter_end_time"> Enter the end time</string>
    <string name="config_route">Configure route</string>
</resources>